--- a/components/header.module.css
+++ b/components/header.module.css
@@ -1,17 +1,16 @@
 
 .header {
-	background: rgb(25, 27, 29);
+	/* background: rgb(30, 32, 34); */
+	background: rgb(50, 52, 54);
 	position: fixed;
-	display: flex;
-	flex-wrap: nowrap;
+	display: block;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 62px;
-	line-height: 31px;
 	z-index: 999px;
 	padding: 16px 32px 16px 32px;
-	box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 0px 0.25rem 0px rgba(0, 0, 0, 0.5);
 }
 
 .firstname {
@@ -20,6 +19,10 @@
 
 .header .name {
 	font-size: 150%;
+}
+
+.header .name a {
+	color: inherit;
 }
 
 .header div {
@@ -33,11 +36,10 @@
 }
 
 .social img {
-	width: 40px;
-	height: 40px;
+	width: 34px;
+	height: 34px;
 	margin-left: 5px;
 	margin-right: 5px;
-	margin-top: -4px;
 	cursor: pointer;
 	filter: invert() brightness(70%)
 }
