--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,8 +1,8 @@
 
 .container {
-	max-width: 36rem;
-	padding: 62px 1rem;
-	margin: 3rem auto 6rem;
+	margin-top: 62px;
+	/* max-width: 36rem; */
+	/* margin: 3rem auto 6rem; */
 }
 
 .header {
