Progress with projects. Added footer. Updated skills.

--- a/components/skills.module.css
+++ b/components/skills.module.css
@@ -17,7 +17,8 @@
 }
 
 .skillsBoxInner {
-	margin: auto;
+	margin: 2rem auto 2rem auto;
+	width: 300px;
 	min-width: 30%;
 	padding: 2rem;
 	border-radius: 6px;
