--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -1,5 +1,7 @@
 
 .footer {
 	height: 200px;
+	margin-top: 100px;
 	background: rgb(25, 27, 29);
+	box-shadow: inset 0px 5px 8px rgb(25, 27, 29);
 }
