--- a/components/header.module.css
+++ b/components/header.module.css
@@ -1,6 +1,5 @@
 
 .header {
-	/* background: rgb(30, 32, 34); */
 	background: rgb(50, 52, 54);
 	position: fixed;
 	display: block;
@@ -8,7 +7,7 @@
 	left: 0;
 	width: 100%;
 	height: 62px;
-	z-index: 999px;
+	z-index: 9999 !important;
 	padding: 16px 32px 16px 32px;
 	box-shadow: 0px 0px 0.25rem 0px rgba(0, 0, 0, 0.5);
 }
