--- a/components/intro.module.css
+++ b/components/intro.module.css
@@ -2,8 +2,6 @@
 .intro {
 	width: 100%;
 	background-color: rgb(25, 27, 29);
-	
-	/* box-shadow: inset -100px 0px 1rem rgb(100, 100, 100); */
 	box-shadow: inset 0px 5px 8px rgb(25, 27, 29), inset 0px -5px 8px rgb(25, 27, 29);
 }
 
@@ -20,6 +18,7 @@
 	text-align: left;
 	flex: 0 0 auto;
 	width: auto;
+	margin: auto;
 	max-width: 100%;
 }
 
@@ -33,7 +32,7 @@
 	text-align: left;
 	flex: 1 0 0%;
 	width: 100%;
-	max-width: 100%;
+	min-width: 400px;
 	padding-left: 2rem;
 }
 
