--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -1,7 +1,11 @@
 
 .footer {
-	height: 200px;
-	margin-top: 100px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 6rem;
+	text-align: center;
 	background: rgb(25, 27, 29);
 	box-shadow: inset 0px 5px 8px rgb(25, 27, 29);
 }
