--- a/components/intro.module.css
+++ b/components/intro.module.css
@@ -1,5 +1,6 @@
 
 .intro {
+	display: block;
 	width: 100%;
 	background-color: rgb(25, 27, 29);
 	box-shadow: inset 0px 5px 8px rgb(25, 27, 29), inset 0px -5px 8px rgb(25, 27, 29);
