--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,6 +1,7 @@
 
 .container {
-	margin-top: 62px;
+	margin: 0 auto;
+	padding-top: 62px;
 	/* max-width: 36rem; */
 	/* margin: 3rem auto 6rem; */
 }
@@ -19,4 +20,8 @@
 	padding: 20px;
 	min-height: 100%;
 	margin: 0 auto -200px;
+}
+
+.contentWrap {
+	padding-bottom: 15rem;
 }
