--- a/components/projects.module.css
+++ b/components/projects.module.css
@@ -24,7 +24,7 @@
 }
 
 .card {
-	height: 655px;
+	height: 660px;
 	width: 450px;
 	margin: 2rem;
 	border-radius: 8px 8px 0 0;
@@ -95,8 +95,7 @@ a.button {
 	display: block;
 	padding: 0.35em 1.2em;
 	border: 0.1em solid #FFFFFF;
-	margin: 0 0.3em 0.3em 0;
-	margin: 0 15%;
+	margin: 0.25em 15%;
 	border-radius: 0.12em;
 	box-sizing: border-box;
 	text-decoration: none;
