--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,14 @@
 
-html, body {
+html {
+	height: 100%;
+}
+
+body {
 	margin: 0;
 	padding: 0;
+	min-height: 100%;
+	position: relative;
+	padding-bottom: 15rem;
 	color: rgb(240, 242, 244);
 	background-color: rgb(40, 42, 44);
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
