--- a/components/header.module.css
+++ b/components/header.module.css
@@ -2,45 +2,47 @@
 .header {
 	background: rgb(50, 52, 54);
 	position: fixed;
-	display: block;
+	display: flex;
+	flex-wrap: wrap;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 62px;
+	height: 4rem;
 	z-index: 9999 !important;
-	padding: 16px 32px 16px 32px;
-	box-shadow: 0px 0px 0.25rem 0px rgba(0, 0, 0, 0.5);
+	padding: 0 1rem;
+	box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
 }
 
 .firstname {
 	font-weight: bold;
 }
 
-.header .name {
-	font-size: 150%;
+.name {
+	flex: 1;
+	font-size: 1.75em;
+	margin: auto;
+	overflow: hidden;
+	white-space: nowrap;
+	vertical-align: middle;
 }
 
-.header .name a {
+.name a {
 	color: inherit;
 	text-decoration: none;
 }
 
-.header div {
-	display: inline;
-	white-space: nowrap;
-}
-
-.header .social {
+.social {
 	float: right;
-	margin-left: auto;
+	margin: auto;
 }
 
 .social img {
-	width: 34px;
-	height: 34px;
-	margin-left: 5px;
-	margin-right: 5px;
+	flex: 1;
+	height: 2.5rem;
+	margin: auto;
 	cursor: pointer;
+	padding-left: 10px;
+	vertical-align: middle;
 	filter: invert() brightness(70%)
 }
 
