--- a/components/intro.module.css
+++ b/components/intro.module.css
@@ -3,7 +3,7 @@
 	display: block;
 	width: 100%;
 	background-color: rgb(25, 27, 29);
-	box-shadow: inset 0px 5px 8px rgb(25, 27, 29), inset 0px -5px 8px rgb(25, 27, 29);
+	box-shadow: inset 0px 12px 8px -10px rgb(18, 20, 22), inset 0px -12px 8px -10px rgb(18, 20, 22);
 }
 
 .inner {
@@ -15,8 +15,8 @@
 }
 
 .innerImage {
-	text-align: left;
 	flex: 0 0 auto;
+	text-align: left;
 	width: auto;
 	margin: auto;
 	max-width: 100%;
@@ -32,7 +32,6 @@
 	text-align: left;
 	flex: 1 0 0%;
 	width: 100%;
-	min-width: 400px;
 	padding-left: 2rem;
 }
 
