--- a/components/projects.module.css
+++ b/components/projects.module.css
@@ -20,12 +20,13 @@
 }
 
 .projectsList li {
-	margin: auto;
+	margin: 0 auto;
+	text-align: center;
+	vertical-align: top;
 }
 
 .card {
-	height: 660px;
-	width: 450px;
+	max-width: 28rem;
 	margin: 2rem;
 	border-radius: 8px 8px 0 0;
 	background-color: rgb(25, 27, 29);
@@ -64,10 +65,8 @@
 .softwareBox {
 	display: flex;
 	flex-wrap: wrap;
-}
-
-.softwareBox span {
-	margin: auto;
+	align-items: center;
+	justify-content: center;
 }
 
 .softwareBox img {
