--- a/components/skills.module.css
+++ b/components/skills.module.css
@@ -14,17 +14,22 @@
 .skillsBox {
 	display: flex;
 	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
 }
 
 .skillsBoxInner {
-	margin: 2rem auto 2rem auto;
-	width: 300px;
-	min-width: 30%;
+	margin: 2rem 1rem;
 	padding: 2rem;
+	min-width: 20rem;
 	border-radius: 6px;
 	background-color: rgb(25, 27, 29);
 	box-shadow: inset 0px 0px 8px rgb(25, 27, 29), 0 8px 20px rgb(20, 27, 29, 0.75);
 }
+
+/* .skillsBoxInner:nth-child(2) {
+	padding: 3rem;
+} */
 
 .skillsBoxIcon {
 	width: 80px;
