--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -9,3 +9,8 @@
 	background: rgb(25, 27, 29);
 	box-shadow: inset 0px 5px 8px rgb(25, 27, 29);
 }
+
+.footer a {
+	color: rgb(80, 80, 80);
+	text-decoration: none;
+}
