--- a/styles/id.module.css
+++ b/styles/id.module.css
@@ -18,6 +18,13 @@
 	text-align: center;
 }
 
+.article video {
+	display: block;
+	margin: auto;
+	max-width: 100%;
+	text-align: center;
+}
+
 .article li {
 	margin-top: 5px;
 }
